une première dalle en béton pour No-feature

--- a/index.html
+++ b/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<meta property="og:image" content="http://ospublish.constantvzw.org/workshop/write-me-a-shadow/social-preview.png"/>
-<meta property="og:site_name" content="OSP Open Source Publishing"/>
-<meta property="og:description"
-          content="Des versions colorées, ombrées, contournées ou extrudées des fonts libres"/>
-<meta property="fb:admins" content="1488294875"/>
-
-<title>Write me a shadow. OSP @ ESAD Valence</title>
-<link rel="stylesheet" href="css/reset.css">
+<title>No feature</title>
 <link rel="stylesheet" href="css/style.css">
-<script src="js/jquery-1.7.2.min.js"></script>
-
-<!-- See the following script for more info on how to make the type effects on this page -->
-<script src="js/multiple-color-font.js"></script>
 
 <div class="container">
-<h1>Valence Type</h1>
-<h2>We write in many languages</h2>
+<h1 class="no-feature">No feature</h1>
 
-<p>Une fonte numérique se laisse modifier et réinterpréter avec plus de souplesse qu’une fonte en plomb. Pourtant la plupart des fontes sont distribuées sous des licences qui en interdisent la modification et la redistribution.<br/>
-À l'occasion de l'atelier "Write me a shadow", nous partirons d'une collection de fontes libres pour suivre plusieurs chemins, dessins et scriptes, permettant d'en générer des versions colorées, ombrées, contournées ou extrudées.<br/>
-Par coupes, décalages et superpositions nous construirons des familles multiples à déployer dans les éditeurs vectoriels et sur le web.</p>
+<p class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></p>
+
+<p class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></p>
+
+<p class="twosteps display"><a href="french-turtles/">Double effet kisskool &#x1F422; </a></p>
+
+<p class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></p>
+
 
 </div>
 
 
-<p class="colophon">In these paragraphs we can write how it came about</p>
+<p class="colophon">What is this No feature about?</p>
 
 </div>
-
-
-<p id="source-files">This is like a side bar with latest commits or something</p>
 
