--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 
 <p class="colophon">What is this No feature about?</p>
-
+No Feature est une invitation à développer un espace de travail collectif autour de la typographie dans le cadre de la section quatrième année design graphique, et plus largement au sein de l'école supérieure d'art et de design de Valence.
+Le projet vise à rassembler des énergies autour d'objets typographiques, quel que soit leur avancement. Les typographies sont partagées de préférence au format UFO, et publiés sous licence libre, invitant les utilisateurs à modifier ou enrichir les projets.
+Cet espace est ouvert à tout les étudiants de l'école, aux anciens étudiants ainsi qu'aux professeurs. 
 </div>
 
