--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <title>No feature</title>
 <link rel="stylesheet" href="css/style.css">
+<link href='http://fonts.googleapis.com/css?family=Cousine' rel='stylesheet' type='text/css'>
 
 <div class="container">
 <h1 class="no-feature">No feature</h1>
