--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href='http://fonts.googleapis.com/css?family=Cousine' rel='stylesheet' type='text/css'>
 
 <div class="container">
-<h1 class="no-feature">No feature</h1>
+<h1 class="no-feature">NO FEATURE</h1>
 
 <p class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></p>
 
