--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 <div class="container">
 <h1 class="no-feature">NO FEATURE</h1>
 
+<p class="legende">Roquette</p>
 <p class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></p>
 
+<p class="legende">Franklin</p>
 <p class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></p>
 
+<p class="legende">Twostep</p>
 <p class="twosteps display"><a href="french-turtles/">Double effet kisskool &#x1F422; </a></p>
 
+<p class="legende">Dauphine</p>
 <p class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></p>
 
 
