--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 class="no-feature">NO FEATURE</h1>
 
 <p class="legende">Roquette</p>
-<p class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></p>
+<span class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></span>
 
 <p class="legende">Franklin</p>
 <p class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></p>
