--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <div class="container">
 <h1 class="no-feature">NO FEATURE</h1>
 
-<p class="legende">Roquette</p>
+<span class="legende">Roquette</span>
 <span class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></span>
 
-<p class="legende">Franklin</p>
-<p class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></p>
+<span class="legende">Franklin</span>
+<span class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></span>
 
-<p class="legende">Twostep</p>
-<p class="twosteps display"><a href="french-turtles/">Double effet kisskool &#x1F422; </a></p>
+<span class="legende">Twostep</span>
+<span class="twosteps display"><a href="french-turtles/">Double effet kisskool &#x1F422; </a></span>
 
-<p class="legende">Dauphine</p>
-<p class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></p>
+<span class="legende">Dauphine</span>
+<span class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></span>
 
 
 </div>
