--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <div class="container">
 <h1 class="no-feature">NO FEATURE</h1>
 
-<span class="legende">Roquette</span>
-<span class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></span>
+<div class="legende">Roquette</div>
+<div class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></div>
 
-<span class="legende">Franklin</span>
-<span class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></span>
+<div class="legende">Franklin</div>
+<div class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></div>
 
-<span class="legende">Twostep</span>
-<span class="twosteps display"><a href="french-turtles/">Double effet kisskool &#x1F422; </a></span>
+<div class="legende">Twostep</div>
+<div class="twosteps display"><a href="french-turtles/">Double effet kisskool &#x1F422; </a></div>
 
-<span class="legende">Dauphine</span>
-<span class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></span>
+<div class="legende">Dauphine</div>
+<div class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></div>
 
 
 </div>
