--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 class="no-feature">NO FEATURE</h1>
 
 <div class="legende">Roquette</div>
-<div class="La_roquette display"><a href="french-turtles/">Fraîche salade</a></div>
+<div class="La_roquette display"><a href="french-turtles/">Fraiche salade</a></div>
 
 <div class="legende">Franklin</div>
 <div class="franklin display"><a href="french-turtles/">Turtle keep dancing, it's logo logic</a></div>
