--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="franklin display"><a href="../french-turtles/franklin.html">Turtle keep dancing, it's logo logic</a></div>
 
 <div class="legende">Twostep — 11.23.2012</div>
-<div class="twosteps display"><a href="../french-turtles/2step.html">Double effet kisskool &#x1F422; </a></div>
+<div class="twosteps display"><a href="../french-turtles/2steps.html">Double effet kisskool &#x1F422; </a></div>
 
 <div class="legende">Dauphine — Setptember 2012</div>
 <div class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></div>
