--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="La_roquette display"><a href="french-turtles/">Fraiche salade</a></div>
 
 <div class="legende">Franklin — 11.23.2012</div>
-<div class="franklin display"><a href="../french-turtles/franklin.html">Turtle keep dancing, it's logo logic</a></div>
+<div class="franklin display"><a href="../french-turtles/franklin.html">Chacun sa merde &#x1F422;</a></div>
 
 <div class="legende">Twostep — 11.23.2012</div>
 <div class="twosteps display"><a href="../french-turtles/2steps.html">Double effet kisskool &#x1F422; </a></div>
