--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <h1 class="no-feature">NO FEATURE</h1>
 
 <div class="legende">Roquette — 11.23.2012</div>
-<div class="La_roquette display"><a href="french-turtles/">Fraiche salade</a></div>
+<div class="La_roquette display"><a href="french-turtles/la-roquette.html/">Fraiche salade</a></div>
 
 <div class="legende">Franklin — 11.23.2012</div>
-<div class="franklin display"><a href="../french-turtles/franklin.html">Chacun sa merde &#x1F422;</a></div>
+<div class="franklin display"><a href="french-turtles/franklin.html">Chacun sa merde &#x1F422;</a></div>
 
 <div class="legende">Twostep — 11.23.2012</div>
-<div class="twosteps display"><a href="../french-turtles/2steps.html">Double effet kisskool &#x1F422; </a></div>
+<div class="twosteps display"><a href="french-turtles/2steps.html">Double effet kisskool &#x1F422; </a></div>
 
-<div class="legende">Dauphine — Setptember 2012</div>
+<div class="legende">Dauphine — September 2012</div>
 <div class="dauphine display"><a href="dauphine/">Le Vercors, Grenoble, Valence, le Dauphiné, la Drôme, l’Isère.</a></div>
 
 
