--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 class="no-feature">NO FEATURE</h1>
 
 <div class="legende">Roquette — 11.23.2012</div>
-<div class="La_roquette display"><a href="french-turtles/la-roquette.html/">Fraiche salade</a></div>
+<div class="La_roquette display"><a href="french-turtles/la-roquette.html">Fraiche salade</a></div>
 
 <div class="legende">Franklin — 11.23.2012</div>
 <div class="franklin display"><a href="french-turtles/franklin.html">Chacun sa merde &#x1F422;</a></div>
