More text that explains

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@ $(function() {
 });
 </script>
 
-
-
 <div class="container">
 <h1 class="no-feature">NO FEATURE</h1>
+
+<p class="colophon">
+Espace de travail typographique collectif menée par les étudiants de la section quatrième année design graphique de l’ESAD Grenoble-Valence, initié dans le cadre d’Up pen down, série de workshops en cours menés par OSP. <a href="#infos">Plus d’infos</a>
+</p>
 
 <h1 class="no-feature">French Turtles</h1>
 
@@ -59,12 +61,12 @@ $(function() {
 
 <span id="dauphine" class="git-widget"></span>
 
-</div>
-
-
-<p class="colophon">
+<p class="colophon" id="infos">
 No Feature est une invitation à développer un espace de travail collectif autour de la typographie dans le cadre de la section quatrième année design graphique, et plus largement au sein de l'école supérieure d'art et de design de Valence.
-Le projet vise à rassembler des énergies autour d'objets typographiques, quel que soit leur avancement. Les typographies sont partagées de préférence au format UFO, et publiés sous licence libre, invitant les utilisateurs à modifier ou enrichir les projets.
-Cet espace est ouvert à tout les étudiants de l'école, aux anciens étudiants ainsi qu'aux professeurs.</p> 
+Le projet vise à rassembler des énergies autour d'objets typographiques, quel que soit leur avancement. Les typographies sont partagées de préférence au format <a href="http://unifiedfontobject.org/" title="Unified Font Object">UFO</a>, et publiés sous licence libre, invitant les utilisateurs à modifier ou enrichir les projets.
+Cet espace est ouvert à tout les étudiants de l'école, aux anciens étudiants ainsi qu'aux professeurs.</p>
+
+<p class="colophon">Les fichiers de travails sont rassemblés dans un dépôt <a href="http://git-scm.com/" title="Git">git</a>. Le site <a href="https://github.com/no-feature" title="Github: no-feature">github</a> fonctionne comme hébergeur. Un mode d’emploi pour collaborer en utilisant ces outils est à venir.</p>
+
 </div>
 
